Zmiana niektórych zmiennych na public (potrzebne do ng build)

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ToDo</title>
-  <base href="/">
-
+  <title>Todo list</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Roboto font-->
