--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Todo list</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
 
   <!-- Roboto font-->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
