--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Todo list</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="/">
+  <base href="https://pawelidziak.github.io/my-todo-list/">
 
   <!-- Roboto font-->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
